--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
+alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.8.0
+apscheduler==3.11.0
+async-timeout==5.0.1
+asyncpg==0.30.0
 bcrypt==4.2.1
 certifi==2025.1.31
 cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.1
+databases==0.9.0
 dnspython==2.7.0
+ecdsa==0.19.0
+email-validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.8
 greenlet==3.1.1
@@ -13,20 +21,33 @@ h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+mako==1.3.9
+markupsafe==3.0.2
 motor==3.7.0
 passlib==1.7.4
 psycopg2-binary==2.9.10
+pyasn1==0.4.8
 pycparser==2.22
+pycrypto==2.6.1
 pydantic==2.10.6
 pydantic-core==2.27.2
+pydantic-settings==2.8.0
 pymongo==4.11.1
 python-dotenv==1.0.1
 python-http-client==3.3.7
+python-jose==3.4.0
 python-multipart==0.0.20
+requests==2.32.3
+rsa==4.9
 sendgrid==6.11.0
+six==1.17.0
 sniffio==1.3.1
 sqlalchemy==2.0.38
 starkbank-ecdsa==2.2.0
 starlette==0.45.3
+stripe==11.5.0
+tenacity==9.0.0
 typing-extensions==4.12.2
+tzlocal==5.3
+urllib3==2.3.0
 uvicorn==0.34.0
