--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.8.0
 apscheduler==3.11.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 async-timeout==5.0.1
 asyncpg==0.30.0
 bcrypt==4.2.1
@@ -25,6 +27,7 @@ mako==1.3.9
 markupsafe==3.0.2
 motor==3.7.0
 passlib==1.7.4
+pip==25.0.1
 psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pycparser==2.22
@@ -40,6 +43,7 @@ python-multipart==0.0.20
 requests==2.32.3
 rsa==4.9
 sendgrid==6.11.0
+setuptools==75.8.0
 six==1.17.0
 sniffio==1.3.1
 sqlalchemy==2.0.38
