completed payment testing. works perfectly.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,17 @@ services:
       - DATABASE_USER=${DATABASE_USER}
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - DATABASE_NAME=${DATABASE_NAME}
+      - JWT_SECRET=${JWT_SECRET}
+      - STRIPE_PUBLIC_KEY=${STRIPE_PUBLIC_KEY}
+      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
+      - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
+
     env_file:
       - .env
     ports:
       - "8000:8000"
+    volumes:
+      - ./static:/app/static  # Mount static files
     depends_on:
       - db
     networks:
